Increased z-index on close-btn to correct issues on mobile view.

--- a/css/styles.css
+++ b/css/styles.css
@@ -648,6 +648,7 @@ Use this document in conjunction with js-modal.js for the scripts that open and 
   position: absolute;
   top: 15px;
   right: 15px;
+  z-index: 20;
   transition-property: all;
   transition-duration: 0.25s;
   transition-timing-function: ease-in; }
