--- a/scss/components/_js-modal.scss
+++ b/scss/components/_js-modal.scss
@@ -161,6 +161,7 @@ Use this document in conjunction with js-modal.js for the scripts that open and 
   position: absolute;
   top: 15px;
   right: 15px;
+  z-index: 20;
   // padding: 0 !important;
   // align-self: flex-end;
   // width: 64px;
